--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    compile 'javax.servlet:jstl:1.2'
+    compile 'org.springframework:spring-dao:2.0.8'
+    compile 'javax.servlet:javax.servlet-api:3.0.1'
+    compile 'org.springframework:spring-jdbc:4.2.2.RELEASE'
     compile 'org.springframework:spring-webmvc:4.2.4.RELEASE'
 
     tomcat 'org.apache.tomcat.embed:tomcat-embed-core:8.0.28'
